tests/sumo/errors/routes/emptyperson/errors.sumo
Error: Person '4' has no plan.
Quitting (on error).
